# Robocon20

./: .gitignore  README.md  tree.md
simulation/scenes/: RaceSceneWithSteerwheel.ttt  closed_machine.ttt  closedmachine_failed.ttt  doggy.ttt  doggy_open.ttt  duolunjiaocheng.ttt  open_machine.ttt  pathplanningTest.ttt
simulation/sim_ws/devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh
simulation/sim_ws/devel/lib/pkgconfig/: cartographer_ros.pc  cartographer_ros_msgs.pc  keyboard.pc  mapping.pc  teb_local_planner_tutorials.pc  vrep_pkg.pc
simulation/sim_ws/devel/lib/vrep_pkg/: omniwheel  steerwheel
simulation/sim_ws/src/keyboard/: CMakeLists.txt
simulation/sim_ws/src/keyboard/src/: keyboardSendPosition.py  keyboard_steeringwheel.py  keyboard_vehicle.py
simulation/sim_ws/src/mapping/: CMakeLists.txt
simulation/sim_ws/src/mapping/config/: amcl_params.yaml  base_local_planner_params.yaml  costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  teb_local_planner_params.yaml
simulation/sim_ws/src/path_planning/: CMakeLists.txt  package.xml
simulation/sim_ws/src/path_planning/include/: Astar_searcher.h  node.h
simulation/sim_ws/src/path_planning/launch/: load_costmap.launch
simulation/sim_ws/src/path_planning/params/: minimal.yaml
simulation/sim_ws/src/path_planning/src/: Astar_searcher.cpp  path_planning_node.cpp
simulation/sim_ws/src/trajectory_planning/: CMakeLists.txt  README.md  package.xml  relaxed_astar_planner_plugin.xml
simulation/sim_ws/src/vrep_pkg/: CMakeLists.txt
(+38 files in other folders)
